After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 684476 - gck: Fix warnings printed by p11-kit during tests
gck: Fix warnings printed by p11-kit during tests
Status: RESOLVED FIXED
Product: gcr
Classification: Core
Component: General
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME keyring maintainer(s)
GNOME keyring maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-09-20 13:28 UTC by Stef Walter
Modified: 2019-02-22 11:58 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gck: Fix warnings printed by p11-kit during tests (885 bytes, patch)
2012-09-20 13:28 UTC, Stef Walter
none Details | Review

Description Stef Walter 2012-09-20 13:28:20 UTC
Fix lots of 'mut != NULL not true at...' lines printed during tests.
Comment 1 Stef Walter 2012-09-20 13:28:23 UTC
Created attachment 224833 [details] [review]
gck: Fix warnings printed by p11-kit during tests

 * Don't pass invalid data to the mutex functions in an effort
   to test them, while running other tests.
Comment 2 Stef Walter 2012-09-25 14:06:32 UTC
Merged into master.