gck: Fix warnings printed by p11-kit during tests

* Don't pass invalid data to the mutex functions in an effort
   to test them, while running other tests.

https://bugzilla.gnome.org/show_bug.cgi?id=684476